# cinnabar

./: CODEOWNERS  Cargo.toml  LICENSE  README.md
.github/workflows/: feature.yml  pr.yml  publish.yml
src/: construct.rs  counter.rs  edge.rs  graphs.rs  index.rs  lib.rs  marker.rs  mutators.rs  providers.rs  topology.rs  traversal.rs  utils.rs  walk.rs
src/graphs/: adjacency.rs  adjacency_list.rs  grid.rs
src/index/: counter.rs
src/utils/: unordered_pair.rs
tests/: adjacency.rs  adjacency_list.rs  grid.rs
