[package]
name = "cinnabar"
version = "0.2.0"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/airuta/cinnabar"
description = "Rust library of graph algorithms and data strctures"
readme = "README.md"
keywords = ["graph", "data-structures", "algorithms"]

[dependencies]
itertools = "0.10.1"

[dev-dependencies]
pretty_assertions = "1.0.0"
